--- a/views/radarr-data.ejs
+++ b/views/radarr-data.ejs
@@ -11,7 +11,7 @@
   <%- include('partials/app-sidebar', { currentPage: 'radarr' }) %>
   
   <div class="lg:pl-64">
-    <%- include('partials/app-header') %>
+    <%- include('partials/app-header', { currentSearch: typeof search !== 'undefined' ? search : '' }) %>
     
     <main class="p-4 lg:p-6">
     <div class="mb-6">
