--- a/views/logs.ejs
+++ b/views/logs.ejs
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body class="bg-gray-100 min-h-screen">
-  <%- include('partials/sidebar', { currentPage: 'logs' }) %>
+  <%- include('partials/app-sidebar', { currentPage: 'logs' }) %>
   
   <main class="ml-64 p-8">
     <div class="mb-6">
